# GapBuffer

./: .gitignore  .travis.yml  GapBuffer.sln  install-linux.sh
GapBuffer/: .travis.yml  CMakeLists.txt  Exception.cpp  Exception.h  GapBuffer.cpp  GapBuffer.h  GapBuffer.vcxproj  GapBuffer.vcxproj.filters  ToDo.txt  TypeSet.h  const_iterator.cpp  const_iterator.h  iterator.cpp  iterator.h  iterator_utilities.h  main.cpp
GapBuffer Bug Tracking/: GapBuffer Bug Tracking.vcxproj  GapBuffer Bug Tracking.vcxproj.filters  GapBuffer.cpp  GapBuffer.h  const_iterator.cpp  const_iterator.h  iterator.cpp  iterator.h  main.cpp
GapBuffer Release/: GapBuffer Release.vcxproj
GapBuffer Test/: GapBuffer Test.vcxproj  pch.h  test.cpp
GapBuffer/GapBuffer/: CMakeLists.txt  GapBuffer.cpp
GapBuffer/GapBuffer/iterators/: const_iterator.h  iterator.cpp  iterator.h
GapBuffer/GapBuffer/utils/: Exception.h  TypeSet.h  iterator_utilities.h
GapBuffer/docs/: CMakeLists.txt  Doxyfile.in
GapBuffer/iterators/: const_iterator.cpp  const_iterator.h  iterator.cpp  iterator.h
GapBuffer/tests/: CMakeLists.txt  test.cpp
GapBuffer/utils/: iterator_utilities.h
